[gd_scene load_steps=3 format=3 uid="uid://bq4wyds1k7lgo"]

[ext_resource type="Script" path="res://src/interface/MainMenu/DynamicPlayerNameInput.gd" id="2_cvfrw"]
[ext_resource type="PackedScene" uid="uid://bw1rw6s1mabbo" path="res://src/interface/MainMenu/player_name_input.tscn" id="3_7u260"]

[node name="Main" type="Node"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
offset_right = 310.0
offset_bottom = 75.0

[node name="Container" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/VBoxContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nombre de joueurs"

[node name="NumberOfPlayer" type="SpinBox" parent="MainMenu/VBoxContainer/Container"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="DynamicPlayerNameInput" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_cvfrw")

[node name="PlayerNameInput" parent="MainMenu/VBoxContainer/DynamicPlayerNameInput" instance=ExtResource("3_7u260")]
layout_mode = 2

[connection signal="value_changed" from="MainMenu/VBoxContainer/Container/NumberOfPlayer" to="MainMenu/VBoxContainer/DynamicPlayerNameInput" method="_on_number_player_value_changed"]
